--- a/JS/B站JS/nodejs/package.json
+++ b/JS/B站JS/nodejs/package.json
@@ -7,7 +7,9 @@
     "mime": "^2.4.6",
     "mysql": "^2.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mongodb": "^3.6.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
