--- a/JS/webpack/webpack_first/package.json
+++ b/JS/webpack/webpack_first/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "express_ming",
+  "name": "webpack_first",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mime": "^2.5.2"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2"
   }
 }
